misc updates-weftec

--- a/careers.html
+++ b/careers.html
@@ -48,7 +48,7 @@ permalink: /jobs
           <td>Paid holidays and vacation</td>
         </tr>
         <tr>
-          <td>Health insurance</td>
+          <td>Health insurance <em class="grey"><a href="https://transparency-in-coverage.uhc.com/" target="_blank">View Transparency in Coverage</a></em></td>
           <td>Dental insurance</td>
         </tr>
         <tr>
