--- a/index.html
+++ b/index.html
@@ -504,10 +504,10 @@ landing: yes
 -->
     
     <div class="row" style="margin-top:25px;">
-      <a href=" https://www.tristateseminar.com/" target="_blank"><img src="/assets/img/logo-tri-state-sm.png" class="img-responsive"/ alt="Tri-State Seminar"></a>
+      <a href="https://www.weftec.org/" target="_blank"><img src="/assets/img/thumb/upcoming-events-weftec-2022.jpg" class="img-responsive"/ alt="WEFTEC 2022"></a>
       <div class="caption text-center">
         <h4>
-          <span class="small"><strong><a href="https://www.tristateseminar.com/" target="_blank">37th Annual Tri-State Seminar</a></strong><br>August 8-11, 2022<br>South Point, Las Vegas, NV</span></h4>
+          <span class="small"><strong><a href="https://www.weftec.org/" target="_blank">WEFTEC 95th Annual Technical Exhibition &amp; Conference</a></strong><br>October 8-12, 2022<br>New Orleans, LA</span></h4>
       </div>
     </div>
 
@@ -556,9 +556,9 @@ landing: yes
     <div class="section-heading">
       <h2>Featured Story</h2>
     </div>
-    <a href="/26-erik-sanderson">
-      <img src="assets/img/podcast/episode-26-erik-sanderson.jpg" alt="Episode 25 - Peter Wright and Frank G. Romito: WJTA Hydroblasting Training and Certification" class="img-responsive" />
-      <p style="padding-top: 10px;"><strong>Industrial Theory Podcast Episode 26</strong><br><span class="grey">Erik Sanderson: Surviving a Waterjet Cut and Highlighting the Importance of Hydroblasting Safety</span></p>
+    <a href="/27-roger-simonsson">
+      <img src="assets/img/podcast/episode-27-roger-simonsson.jpg" alt="Episode 27 - Talking Hydrodemolition, Business, and Leadership with Roger Simonsson, CEO of AquaJet Systems" class="img-responsive" />
+      <p style="padding-top: 10px;"><strong>Industrial Theory Podcast Episode 27</strong><br><span class="grey">Roger Simonsson: Talking Hydrodemolition, Business, and Leadership</span></p>
     </a>
     <div class="section-heading margin-top-30">
       <h2>Mobile App</h2>
