--- a/lp-compass/autopack.html
+++ b/lp-compass/autopack.html
@@ -2,6 +2,13 @@
 <!--  Last Published: Fri Jun 10 2022 17:09:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62a1ffddcb357bb750506641" data-wf-site="62a1ffddcb357b0744506640">
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-PJDHVTX');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <title>AutoPack Compass</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -16,6 +23,9 @@
   <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
 <body class="body">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PJDHVTX" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div class="sa-header wf-section">
     <div class="w-container"><a href="/"><img src="images/stoneage_logo.png" loading="lazy" alt="" class="image-3"></a></div>
   </div>
@@ -84,5 +94,24 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=62a1ffddcb357b0744506640" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+  <!-- Google Tag Manager -->
+  <script>
+  ;(function ($, window, document) {
+    try {
+      $(document).ready(function () {
+        var $pardotForm = $('#pardot-form');
+        if ($pardotForm.attr('action') === 'https://info.stoneagetools.com/compassinfo') {
+          $pardotForm.find('[type="submit"]').on('click', function() {
+            pushDataLayerEvent('Compass Btn Clk', true);
+          });
+        }
+      });
+    } catch (e) {
+      window.console && window.console.error(e);
+    }
+  })(jQuery, window, document);
+  </script>
+  <!-- End Google Tag Manager --> 
+
 </body>
 </html>
