new podcast, catalog version

--- a/index.html
+++ b/index.html
@@ -559,9 +559,9 @@ landing: yes
     <div class="section-heading">
       <h2>Featured Story</h2>
     </div>
-    <a href="/27-roger-simonsson">
-      <img src="assets/img/podcast/episode-27-roger-simonsson.jpg" alt="Episode 27 - Talking Hydrodemolition, Business, and Leadership with Roger Simonsson, CEO of AquaJet Systems" class="img-responsive" />
-      <p style="padding-top: 10px;"><strong>Industrial Theory Podcast Episode 27</strong><br><span class="grey">Roger Simonsson: Talking Hydrodemolition, Business, and Leadership</span></p>
+    <a href="/28-terry-gromes-jr">
+      <img src="assets/img/podcast/episode-28-terry-gromes-jr.png" alt="Episode 28 - How an Unexpected Partnership will Revolutionize Waterblasting with Terry Gromes, Jr., Product Strategy Manager at Terydon" class="img-responsive" />
+      <p style="padding-top: 10px;"><strong>Industrial Theory Podcast Episode 28</strong><br><span class="grey">Terry Gromes Jr.: How an Unexpected Partnership will Revolutionize Waterblasting in Industrial Cleaning</span></p>
     </a>
     <div class="section-heading margin-top-30">
       <h2>Mobile App</h2>
