misc updates, WJTA 22

--- a/index.html
+++ b/index.html
@@ -494,22 +494,19 @@ landing: yes
       <h2>Events</h2>
     </div>
     
-<!--
     <div class="row" style="margin-top:25px;">
-      <a href="https://ifat.de/en/" target="_blank"><img src="/assets/img/thumb/upcoming_events_ifat_2020.jpg" class="img-responsive"/ alt="IFAT 2022"></a>
+      <a href="https://sprintrobotics.org/event/sprint-robotics-north-american-roadshow-gulf-coast/" target="_blank"><img src="/assets/img/thumb/upcoming-events-sprint-22.png" class="img-responsive"/ alt="SPRINT Robotics North American Roadshow"></a>
       <div class="caption text-center">
         <h4>
-          <span class="small"><strong><a href="https://ifat.de/en/" target="_blank">IFAT 2022</a></strong><br>May 30-June 3, 2022<br>Messe München<br>
-          Munich, Germany</span></h4>
+          <span class="small"><strong><a href="https://ifat.de/en/" target="_blank">SPRINT Robotics North American Roadshow</a></strong><br>Octobet 17-21, 2022<br>Gulf Coast</span></h4>
       </div>
     </div>
--->
     
     <div class="row" style="margin-top:25px;">
-      <a href="https://www.weftec.org/" target="_blank"><img src="/assets/img/thumb/upcoming-events-weftec-2022.jpg" class="img-responsive"/ alt="WEFTEC 2022"></a>
+      <a href="https://www.wjtaexpo.com/assnfe/Ev.asp?ID=36" target="_blank"><img src="/assets/img/thumb/upcoming-events-wjta-expo-22.png" class="img-responsive"/ alt="WJTA 2022"></a>
       <div class="caption text-center">
         <h4>
-          <span class="small"><strong><a href="https://www.weftec.org/" target="_blank">WEFTEC 95th Annual Technical Exhibition &amp; Conference</a></strong><br>October 8-12, 2022<br>New Orleans, LA</span></h4>
+          <span class="small"><strong><a href="https://www.weftec.org/" target="_blank">2022 WJTA Conference &amp; Expo</a></strong><br>November 1-3, 2022<br>New Orleans, LA</span></h4>
       </div>
     </div>
 
