--- a/email-subscribe.html
+++ b/email-subscribe.html
@@ -15,24 +15,8 @@ permalink: /subscribe
   <div class="col-sm-7">
     
     <!-- Pardot contact form -->
-    <iframe src="https://www2.stoneagetools.com/l/644393/2019-04-16/4g5vt" width="100%" scrolling="no" id="sizetracker" frameborder="0"></iframe>        
-      <!-- Pardot form sizing -->
-      <script type="text/javascript">
-        // Create browser compatible event handler.
-        var eventMethod = window.addEventListener ? "addEventListener" : "attachEvent";
-        var eventer = window[eventMethod];
-        var messageEvent = eventMethod == "attachEvent" ? "onmessage" : "message";
-        // Listen for a message from the iframe.
-        eventer(messageEvent, function(e) {
-          if (isNaN(e.data)) return;
-
-          // replace #sizetracker with what ever what ever iframe id you need
-          document.getElementById('sizetracker').style.height = e.data + 'px';
-
-        }, false);
-      </script>
-    <!-- End Pardot contact form -->
-    
+    <iframe src="https://info.stoneagetools.com/l/644393/2019-04-16/4g5vt" width="100%" height="500" type="text/html" frameborder="0" allowTransparency="true" style="border: 0"></iframe>    
+  
   </div>
   
   <aside class="col-sm-3 col-sm-offset-1">
