--- a/index.html
+++ b/index.html
@@ -495,14 +495,6 @@ landing: yes
     </div>
     
     <div class="row" style="margin-top:25px;">
-      <a href="https://heat-exchanger-world-americas.com/" target="_blank"><img src="/assets/img/thumb/upcoming-events-hew-2022.png" class="img-responsive"/ alt="Heat Exchanger World"></a>
-      <div class="caption text-center">
-        <h4>
-          <span class="small"><strong><a href="https://ifat.de/en/" target="_blank">Heat Exchanger World</a></strong><br>November 16-17, 2022<br>Pasadena, TX</span></h4>
-      </div>
-    </div>
-    
-    <div class="row" style="margin-top:25px;">
       <a href="https://www.bicmagazine.com/bic-events#event=wjta-hydroblast-safety-and-training-demo-day;instance=20221208140000" target="_blank"><img src="/assets/img/logo-wjta.png" class="img-responsive"/ alt="WJTA Hydroblast Safety and Training Demo Day"></a>
       <div class="caption text-center">
         <h4>
@@ -563,9 +555,9 @@ landing: yes
     <div class="section-heading">
       <h2>Featured Story</h2>
     </div>
-    <a href="/29-jimmy-peck">
-      <img src="/assets/img/podcast/episode-1-jimmy-peck.png" alt="Episode 29-Gearing up for WJTA with Jimmy Peck" class="img-responsive" />
-      <p style="padding-top: 10px;"><strong>Industrial Theory Podcast Episode 29</strong><br><span class="grey">Jimmy Peck: Gearing Up for the WJTA Conference &amp; Expo</span></p>
+    <a href="/30-sam-smolik">
+      <img src="/assets/img/podcast/episode-30-sam-smolik.png" alt="Episode 30-Sam Smolik's Journey through 50 Years of Facility Ownership" class="img-responsive" />
+      <p style="padding-top: 10px;"><strong>Industrial Theory Podcast Episode 30</strong><br><span class="grey">Sam Smolik: Journey through 50 Years of Facility Ownership</span></p>
     </a>
     <div class="section-heading margin-top-30">
       <h2>Mobile App</h2>
