--- a/podcast/industrial-theory.html
+++ b/podcast/industrial-theory.html
@@ -20,13 +20,23 @@ master-slider: yes
     
     <div class="row podcast-listing">      
       <div class="col-sm-6">
+        <a href="/30-sam-smolik">
+          <img src="/assets/img/podcast/episode-30-sam-smolik.png" class="img-responsive" alt="Journey through 50 Years of Facility Ownership to Author and Speaker" />
+          <h3 style="text-transform: none;">Sam Smolik: Journey through 50 Years of Facility Ownership</h3>
+          <p class="small gray">November 23, 2022</p>
+          <button class="btn">Listen</button>
+        </a>
+      </div>   
+      <div class="col-sm-6">
         <a href="/29-jimmy-peck">
           <img src="/assets/img/podcast/episode-1-jimmy-peck.png" class="img-responsive" alt="Episode 29-Gearing up for WJTA with Jimmy Peck" />
-          <h3 style="text-transform: none;">Jimmy Peck: Gearing Up for the WJTA Conference &amp; Expo<br>&nbsp;</h3>
+          <h3 style="text-transform: none;">Jimmy Peck: Gearing Up for the WJTA Conference &amp; Expo</h3>
           <p class="small gray">October 25, 2022</p>
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/28-terry-gromes-jr">
           <img src="/assets/img/podcast/episode-28-terry-gromes-jr.png" class="img-responsive" alt="Terry Gromes Jr.: How an Unexpected Partnership will Revolutionize Waterblasting in Industrial Cleaning" />
@@ -35,16 +45,16 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/27-roger-simonsson">
           <img src="/assets/img/podcast/episode-27-roger-simonsson.jpg" class="img-responsive" alt="Roger Simonsson: Talking Hydrodemolition, Business, and Leadership" />
-          <h3 style="text-transform: none;">Roger Simonsson: Talking Hydrodemolition, Business, and Leadership<br>&nbsp;</h3>
+          <h3 style="text-transform: none;">Roger Simonsson: Talking Hydrodemolition, Business, and Leadership</h3>
           <p class="small gray">August 19, 2022</p>
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/26-erik-sanderson">
           <img src="/assets/img/podcast/episode-26-erik-sanderson.jpg" class="img-responsive" alt="Erik Sanderson: Surviving a Waterjet Cut and Highlighting the Importance of Hydroblasting Safety" />
@@ -53,16 +63,16 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/25-wjta-certification">
           <img src="/assets/img/podcast/episode-25-wjta-certification.jpg" class="img-responsive" alt="Peter Wright and Frank G. Romito: WJTA Hydroblasting Training and Certification" />
-          <h3 style="text-transform: none;">Peter Wright &amp; Frank G. Romito: WJTA Hydroblasting Training and Certification</h3>
+          <h3 style="text-transform: none;">Peter Wright &amp; Frank G. Romito: WJTA Hydroblasting Training and Certification<br>&nbsp;</h3>
           <p class="small gray">June 21, 2022</p>
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/24-philipp-eisenmann">
           <img src="/assets/img/podcast/episode-24-philipp-eisenmann.jpg" class="img-responsive" alt="Marco van der Laan: How the Sentinel Cleaned Exchangers Four Times Faster" />
@@ -71,8 +81,6 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/23-peeters">
           <img src="/assets/img/podcast/episode-23-marco-van-der-laan.jpg" class="img-responsive" alt="Marco van der Laan: How the Sentinel Cleaned Exchangers Four Times Faster" />
@@ -81,6 +89,8 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/22-compass">
           <img src="/assets/img/podcast/episode-22-mike-and-kelley.jpg" class="img-responsive" alt="TJ Suiter: Protecting Wastewater Workers from Lethal Pathogens" />
@@ -89,26 +99,24 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/21-tom-costabile">
           <img src="/assets/img/podcast/episode-21-tom-costabile.jpg" class="img-responsive" alt="TJ Suiter: Protecting Wastewater Workers from Lethal Pathogens" />
-          <h3 style="text-transform: none;">Tom Costabile: Why Engineering is an Ideal Career Path</h3>
+          <h3 style="text-transform: none;">Tom Costabile: Why Engineering is an Ideal Career Path<br>&nbsp;</h3>
           <p class="small gray">February 4, 2022</p>
-          <button class="btn">Listen</button>
-        </a>
-      </div>
-      <div class="col-sm-6">
-        <a href="/20-tj-suiter">
-          <img src="/assets/img/podcast/episode-20-tj-suiter.jpg" class="img-responsive" alt="TJ Suiter: Protecting Wastewater Workers from Lethal Pathogens" />
-          <h3 style="text-transform: none;">TJ Suiter: Protecting Wastewater Workers from Lethal Pathogens</h3>
-          <p class="small gray">January 10, 2022</p>
           <button class="btn">Listen</button>
         </a>
       </div>
     </div>
     <div class="row podcast-listing"> 
+      <div class="col-sm-6">
+        <a href="/20-tj-suiter">
+          <img src="/assets/img/podcast/episode-20-tj-suiter.jpg" class="img-responsive" alt="TJ Suiter: Protecting Wastewater Workers from Lethal Pathogens" />
+          <h3 style="text-transform: none;">TJ Suiter: Protecting Wastewater Workers from Lethal Pathogens<br>&nbsp;</h3>
+          <p class="small gray">January 10, 2022</p>
+          <button class="btn">Listen</button>
+        </a>
+      </div>
       <div class="col-sm-6">
         <a href="/19-francesco-coletti">
           <img src="/assets/img/podcast/episode-19-francesco-coletti.jpg" class="img-responsive" alt="Dr. Francesco Coletti: The Power of Predictive Maintenance for Industrial Heat Transfer" />
@@ -117,24 +125,26 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/18-john-wolgamott">
           <img src="/assets/img/podcast/episode-18-john-wolgamott.jpg" class="img-responsive" alt="John Wolgamott: A Conversation with StoneAge Inc. Co-Founder" />
-          <h3 style="text-transform: none;">John Wolgamott: A Conversation with StoneAge Inc. Co-Founder<br>&nbsp;</h3>
+          <h3 style="text-transform: none;">John Wolgamott: A Conversation with StoneAge Inc. Co-Founder</h3>
           <p class="small gray">November 18, 2021</p>
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/17-jerry-carter">
           <img src="/assets/img/podcast/episode-17-jerry-carter.jpg" class="img-responsive" alt="Adam Markham: Sentinel Automation Technology, A New Era for Industrial Cleaning" />
-          <h3 style="text-transform: none;">Jerry Carter: High-Pressure Hosing Innovation<br>&nbsp;</h3>
+          <h3 style="text-transform: none;">Jerry Carter: High-Pressure Hosing Innovation</h3>
           <p class="small gray">September 30, 2021</p>
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/16-adam-markham">
           <img src="/assets/img/podcast/episode-16-adam-markham.jpeg" class="img-responsive" alt="Adam Markham: Sentinel Automation Technology, A New Era for Industrial Cleaning" />
@@ -143,8 +153,6 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/15-steve-richmond">
           <img src="/assets/img/podcast/episode-15-steve-richmond.jpg" class="img-responsive" alt="Steve Richmond: Advancing Efficiencies through Enterprise Asset Management and Technology" />
@@ -153,16 +161,16 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/14-hans-borgt">
           <img src="/assets/img/podcast/episode-14-hans-borgt.jpg" class="img-responsive" alt="Episode 14 - Industrial Cleaning Safety and Reviving the European Waterjetting Institute" />
-          <h3 style="text-transform: none;">Hans Borgt: Industrial Cleaning Safety and Reviving the European Waterjetting Institute</h3>
+          <h3 style="text-transform: none;">Hans Borgt: Industrial Cleaning Safety and Reviving the European Waterjetting Institute<br>&nbsp;</h3>
           <p class="small gray">December 18, 2020</p>
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/13-chad-kalland">
           <img src="/assets/img/podcast/episode-13-chad-kalland.jpg" class="img-responsive" alt="Episode 13 - How One CEO Grew Their Company by Inspiring Employees to Rise to Their Fullest Potential" />
@@ -171,6 +179,8 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/12-samantha-cervantes">
           <img src="/assets/img/podcast/episode-12-samantha-cervantes.jpg" class="img-responsive" alt="Episode 12 - Don’t Get Left Behind: How Data Analytics Can Transform Our Industry" />
@@ -179,8 +189,6 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div> 
-    </div>
-    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/11-john-dijulius">
           <img src="/assets/img/podcast/episode-11-john-dijulius.jpg" class="img-responsive" alt="Episode 11 - Creating a Customer Experience that Makes Your Brand One That People Can't Live Without" />
@@ -189,16 +197,16 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/10-mahesh-parameswaran">
           <img src="/assets/img/podcast/episode-10-mahesh-parameswaren.jpg" class="img-responsive" alt="Episode 10 - Business in India and How COVID Will Speed up the Adaptation of Automation" />
-          <h3 style="text-transform: none;">Mahesh Parameswaran: Business in India and how COVID will speed up the adaptation of automation<br>&nbsp;</h3>
+          <h3 style="text-transform: none;">Mahesh Parameswaran: Business in India and how COVID will speed up the adaptation of automation</h3>
           <p class="small gray">September 17, 2020</p>
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/9-peter-wright">
           <img src="/assets/img/podcast/episode-9-peter-wright.jpg" class="img-responsive" alt="Episode 9 - What is the WJTA up to and what are the plans for the future?" />
@@ -206,7 +214,9 @@ master-slider: yes
           <p class="small gray">August 4, 2020</p>
           <button class="btn">Listen</button>
         </a>
-      </div>
+      </div> 
+    </div>
+    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/8-steven-trevino">
           <img src="/assets/img/podcast/episode-8-steven-trevino.jpg" class="img-responsive" alt="Episode 8 - How does the world of robotics fit into industrial cleaning?" />
@@ -214,9 +224,7 @@ master-slider: yes
           <p class="small gray">July 29, 2020</p>
           <button class="btn">Listen</button>
         </a>
-      </div>  
-    </div>
-    <div class="row podcast-listing"> 
+      </div> 
       <div class="col-sm-6">
         <a href="/7-ron-justin">
           <img src="/assets/img/podcast/episode-7-ron-justin.jpg" class="img-responsive" alt="Episode 7 - Industrial automation will be a significant part of our future" />
@@ -225,6 +233,8 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/6-brad-clark">
           <img src="/assets/img/podcast/episode-6-brad-clark.jpg" class="img-responsive" alt="Episode 6-Growing an industrial cleaning company is never easy... What has set HCPSC apart" />
@@ -233,16 +243,16 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div> 
-    </div>
-    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/5-andreas-felske">
           <img src="/assets/img/podcast/episode-5-andreas-felske.jpg" class="img-responsive" alt="Episode 5 - Global Industrial Cleaning Safety Is Significantly Improving" />
-          <h3 style="text-transform: none;">Andreas Felske: With a Focused Leader, Global Industrial Cleaning Safety Is Significantly Improving<br>&nbsp;</h3>
+          <h3 style="text-transform: none;">Andreas Felske: With a Focused Leader, Global Industrial Cleaning Safety Is Significantly Improving</h3>
           <p class="small gray">March 30, 2020</p>
           <button class="btn">Listen</button>
         </a>
       </div> 
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/4-david-beckum">
           <img src="/assets/img/podcast/episode-4-david-beckum.jpg" class="img-responsive" alt="Episode 4-How to Create a Great Industrial Cleaning Company by Investing in Your People" />
@@ -259,16 +269,16 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/2-marlies-tump">
           <img src="/assets/img/podcast/episode-2-marliese-tump.png" class="img-responsive" alt="Episode 2-The Importance of Workforce Safety Training in the Industrial Cleaning Industry" />
-          <h3 style="text-transform: none;">Marlies Tump: The Importance of Workforce Safety Training in the Industrial Cleaning Industry<br>&nbsp;</h3>
+          <h3 style="text-transform: none;">Marlies Tump: The Importance of Workforce Safety Training in the Industrial Cleaning Industry</h3>
           <p class="small gray">December 5, 2019</p>
           <button class="btn">Listen</button>
         </a>
       </div> 
-    </div>
-    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/1-jimmy-peck">
           <img src="/assets/img/podcast/episode-1-jimmy-peck.png" class="img-responsive" alt="Episode 1-Leadership and Technology in the Industrial Cleaning Industry with Jimmy Peck" />
